docker/k8s/demo-istio.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: springboot-demo-vs
spec:
  hosts:
    - app1.konglingan.com
  gateways:
    - istio-ingressgateway
  http:
    - match:
        - headers:
            version:
              exact: "1.0.0"
      route:
        - destination:
            host: springboot-demo
            subset: v1.0.0
    - route:
        - destination:
            host: springboot-demo
            subset: v2.0.0

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: springboot-demo-dr
spec:
  host: springboot-demo
  subsets:
    - name: v1.0.0
      labels:
        version: v1.0.0
    - name: v2.0.0
      labels:
        version: v2.0.0
